Causeview Package Complete/src/objects/Volunteer_Role__c.object
<CustomObject>
    <description>Used to track and manage the required Volunteer Roles within the Volunteer Opportunities in the Causeview Volunteers application</description>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Required education level for volunteers filling the role.</description>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>High School/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade/Vocational School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date of the last associated Volunteer Position Shift.</description>
        <label>End Date</label>
        <summarizedField>Volunteer_Shift__c.Shift_Date__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>A secondary ID, useful for data migration or a search index.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency_of_Service__c</fullName>
        <description>Required frequency for volunteers in the position (Flexible, One-Time, Weekly, Bi-Weekly, Monthly)</description>
        <inlineHelpText>The frequency required for the Volunteer Position</inlineHelpText>
        <label>Frequency of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Kind_Hourly_Rate__c</fullName>
        <label>In-Kind Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Required language skills for volunteers filling the role</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASL American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurdish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swahili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <description>City for the Volunteer Role location.</description>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <description>State or province for the Volunteer Role location.</description>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <description>Street address for the Volunteer Role location.</description>
        <label>Location Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Code__c</fullName>
        <description>Zip or postal code for the Volunteer Role location.</description>
        <label>Location Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Needed__c</fullName>
        <description>Special requirements for the volunteer filling the role</description>
        <label>Special Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Hours_Completed__c</fullName>
        <description>Sum of the logged hours for all existing Volunteer Position Shifts for the Volunteer Role.</description>
        <label>Number of Service Hours Completed</label>
        <summarizedField>Volunteer_Shift__c.Logged_Hours__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Hours_Confirmed__c</fullName>
        <description>Sum of the confirmed hours for all existing Volunteer Position Shifts for the Volunteer Role.</description>
        <label>Number of Service Hours Confirmed</label>
        <summarizedField>Volunteer_Shift__c.Confirmed_Hours__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Hours_Involved__c</fullName>
        <description>Sum of the duration (hours) for all existing Volunteer Position Shifts for the Volunteer Role.</description>
        <label>Number of Service Hours Involved</label>
        <summarizedField>Volunteer_Shift__c.Duration_Hours__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Role_Description_Templates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Volunteer Position Description used by this Volunteer Position.</inlineHelpText>
        <label>Role Description Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role_Template__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Role_Template__c</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Volunteer_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <description>Description of the Volunteer Role.</description>
        <label>Role Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Role_Locale__c</fullName>
        <description>The areas that the role requires the Volunteer to travel to</description>
        <inlineHelpText>The areas that the role requires the Volunteer to travel to</inlineHelpText>
        <label>Role Locale</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role_Status__c</fullName>
        <description>The status of the Volunteer Role (Proposed, Open - Public, Open - Private, In Screening, Filled, Completed, Cancelled, Closed)</description>
        <inlineHelpText>The status of the Volunteer Role</inlineHelpText>
        <label>Role Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills_Needed__c</fullName>
        <description>Desired professional skills for volunteers to fill Volunteer Role.</description>
        <label>Skills &amp; Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to Lift Heavy Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Data Entry + email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Expert MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Intermediate MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Arts/Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Software Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL English as Second Language Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpersonal Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date of the earliest associated Volunteer Position Shift.</description>
        <label>Start Date</label>
        <summarizedField>Volunteer_Shift__c.Shift_Date__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <description>The name of the User supervising the volunteer work</description>
        <formula>Volunteer_Supervisor__r.FirstName &amp; &quot; &quot; &amp; Volunteer_Supervisor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>_Sys Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sys_Shift_Count__c</fullName>
        <label>_Sys Shift Count</label>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <description>Tasks the volunteer who fills the role must complete</description>
        <label>Role Tasks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Provided__c</fullName>
        <description>The types of training provided to successful volunteer applicants to prepare them for the role.</description>
        <label>Training Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Event Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome/Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Specific Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation/Shadowing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity__c</fullName>
        <inlineHelpText>The Volunteer Opportunity that the role is related to</inlineHelpText>
        <label>Volunteer Opportunity</label>
        <referenceTo>Volunteer_Opportunity__c</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Volunteer_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer_Supervisor_Email__c</fullName>
        <description>The email of the User supervising the volunteer work.</description>
        <formula>Volunteer_Supervisor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Supervisor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Supervisor_Phone__c</fullName>
        <description>The phone number of the User supervising the volunteer work.</description>
        <formula>Volunteer_Supervisor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Supervisor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the User supervising the volunteer work</description>
        <label>Volunteer Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Positions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Description_Templates__c</columns>
        <columns>Volunteer_Opportunity__c</columns>
        <columns>Role_Status__c</columns>
        <columns>Frequency_of_Service__c</columns>
        <columns>Role_Locale__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Service_Hours_Involved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Volunteer Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>